--- a/src/constance_test_runner/Cargo.toml
+++ b/src/constance_test_runner/Cargo.toml
@@ -12,8 +12,10 @@ constance_test_suite = { path = "../constance_test_suite", default-features = fa
 arg_enum_proc_macro = "0.3.0"
 aho-corasick = "0.7.13"
 probe-rs-rtt = "0.3.0"
+tokio-serial = "4.3.3"
 lazy_static = "1.4.0"
 env_logger = "0.7.1"
+mio-serial = "3.3.1"
 itertools = "0.9.0"
 miniserde = "0.1.13"
 structopt = "0.3.15"
@@ -21,6 +23,7 @@ thiserror = "1.0.20"
 probe-rs = "0.8.0"
 tempdir = "0.3.7"
 log = "0.4.8"
+crc = "1.8.1"
 
 [dependencies.goblin]
 version = "0.2.3"
@@ -29,4 +32,4 @@ features = ["std", "elf32"]
 
 [dependencies.tokio]
 version = "0.2.21"
-features = ["process", "macros", "time", "io-util", "fs", "blocking"]
+features = ["process", "macros", "time", "io-util", "fs", "blocking", "sync"]
