--- a/src/constance_port_riscv/Cargo.toml
+++ b/src/constance_port_riscv/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/yvt/Constance"
 
 [features]
 emulate-lr-sc = []
+maintain-pie = []
 preload-registers = []
 
 [dependencies]
