--- a/src/constance_test_runner/Cargo.toml
+++ b/src/constance_test_runner/Cargo.toml
@@ -11,6 +11,7 @@ constance_test_suite = { path = "../constance_test_suite", default-features = fa
 
 arg_enum_proc_macro = "0.3.0"
 aho-corasick = "0.7.13"
+futures-core = "0.3.5"
 probe-rs-rtt = "0.3.0"
 tokio-serial = "4.3.3"
 lazy_static = "1.4.0"
@@ -32,4 +33,4 @@ features = ["std", "elf32"]
 
 [dependencies.tokio]
 version = "0.2.21"
-features = ["process", "macros", "time", "io-util", "fs", "blocking", "sync"]
+features = ["process", "macros", "time", "io-util", "io-std", "fs", "blocking", "sync"]
