--- a/src/constance_test_runner/Cargo.toml
+++ b/src/constance_test_runner/Cargo.toml
@@ -23,6 +23,7 @@ structopt = "0.3.15"
 thiserror = "1.0.20"
 probe-rs = "0.8.0"
 tempdir = "0.3.7"
+anyhow = "1.0.32"
 log = "0.4.8"
 crc = "1.8.1"
 
