chore(ci): add component `rust-src`, which is needed to use `-Zbuild-std=core`

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -155,6 +155,7 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
+          components: rust-src
 
       - name: Install Dependencies (Linux)
         run: |
