--- a/.github/actions/install-qemu/action.yml
+++ b/.github/actions/install-qemu/action.yml
@@ -15,9 +15,14 @@ runs:
         qemu_prefix=$HOME/.qemu
         qemu_timestamp=$HOME/.qemu/${{ inputs.version }}
 
+        # Add the prefix to path
+        echo '::add-path::'$qemu_prefix/bin
+
+        # Skip the remaining steps if QEMU has already been built
         if [ -f "$qemu_timestamp" ]; then
           exit
         fi
+        rm -rf $qemu_prefix
 
         # Build QEMU
         wget --no-verbose https://download.qemu.org/qemu-${{ inputs.version }}.tar.xz
@@ -28,8 +33,5 @@ runs:
         make install
 
         touch "$qemu_timestamp"
-
-        # Add the prefix to path
-        echo '::add-path::'$qemu_prefix/bin
 
       shell: bash
