--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -162,6 +162,12 @@ jobs:
           sudo apt-get update
           sudo apt-get install libusb-1.0-0-dev libudev-dev
 
+      - name: Cache QEMU's Built Binaries
+        uses: actions/cache@v2
+        with:
+          path: ~/.qemu
+          key: ${{ runner.os }}-ci-qemu-riscv
+
       - name: Install QEMU 5.1.0 from Source
         uses: ./.github/actions/install-qemu
         with:
