--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,10 +102,14 @@ jobs:
           - { ty: riscv, runner_target: qemu_sifive_u_rv64, runner_args: "" }
           # SiFive E, RV64IMAC
           - { ty: riscv, runner_target: qemu_sifive_e_rv64, runner_args: "" }
+          # SiFive E, RV64IMA
+          - { ty: riscv, runner_target: qemu_sifive_e_rv64, runner_args: --arch rv64i+m+a }
           # SiFive U, RV32GC
           - { ty: riscv, runner_target: qemu_sifive_u_rv32, runner_args: "" }
           # SiFive E, RV32IMAC
           - { ty: riscv, runner_target: qemu_sifive_e_rv32, runner_args: "" }
+          # SiFive E, RV32IA
+          - { ty: riscv, runner_target: qemu_sifive_e_rv32, runner_args: --arch rv32i+a }
     steps:
       - name: Checkout
         uses: actions/checkout@v2
