--- a/src/constance_test_suite/Cargo.toml
+++ b/src/constance_test_suite/Cargo.toml
@@ -17,15 +17,10 @@ tests_selective = []
 [dependencies]
 constance = { path = "../constance" }
 
+assert_matches = { version = "1.4.0" }
 staticvec = { version = "0.10.5", default-features = false }
 wyhash = { version = "0.3.0" }
 log = { version = "0.4.8" }
-
-[dependencies.assert_matches]
-# - “Make the crate `no_std`”
-#   <https://github.com/murarth/assert_matches/pull/8>
-git = "https://github.com/yvt/assert_matches.git"
-rev = "8b959e51ac75f9760378cd4e0722246235a23270"
 
 [dev-dependencies]
 quickcheck_macros = "0.9.1"
