--- a/src/constance/Cargo.toml
+++ b/src/constance/Cargo.toml
@@ -11,6 +11,7 @@ keywords = ["constance", "rtos"]
 repository = "https://github.com/yvt/Constance"
 
 [dependencies]
+assert_matches = { version = "1.4.0" }
 num-integer = { version = "0.1.42", default-features = false }
 num-traits = { version = "0.2.11", default-features = false }
 pin-utils = { version = "0.1.0" }
