--- a/src/constance_port_arm_m_test_driver/Cargo.toml
+++ b/src/constance_port_arm_m_test_driver/Cargo.toml
@@ -36,7 +36,7 @@ panic-semihosting = { version = "0.5.3", optional = true }
 panic-rtt-target = { version = "0.1.0", optional = true, features = ["cortex-m"] }
 cortex-m-rt = { version = "0.6.12", optional = true, features = ["device"] }
 rtt-target = { version = "0.2.0", optional = true, features = ["cortex-m"] }
-cortex-m = { version = "0.6.2", optional = true }
+cortex-m = { version = "0.6.3", optional = true, features = ["inline-asm"] }
 log = { version = "0.4.8", optional = true }
 
 [dependencies.constance_test_suite]
