chore: generate debug information for release builds

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,6 @@ members = [
 # issue that affects us).
 git = "https://github.com/probe-rs/probe-rs.git"
 rev = "8bb53577ccee46550c0b688dfc2d13c1cd896083"
+
+[profile.release]
+debug = true
