feat: rename `inline-syscall` feature to `inline_syscall`
I noticed `constance_test_suite` already uses snake_case in feature
names.

--- a/src/constance/Cargo.toml
+++ b/src/constance/Cargo.toml
@@ -12,7 +12,7 @@ repository = "https://github.com/yvt/Constance"
 
 [features]
 default = []
-inline-syscall = []
+inline_syscall = []
 
 [dependencies]
 assert_matches = { version = "1.4.0" }
