--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -16,10 +16,6 @@ jobs:
         with:
           profile: minimal
 
-      - name: Build Documentation for “constance”
-        uses: actions-rs/cargo@v1
-        with: { command: doc, args: -p constance }
-
       - name: Build Documentation for “constance_port_std”
         uses: actions-rs/cargo@v1
         with: { command: doc, args: -p constance_port_std }
@@ -39,6 +35,10 @@ jobs:
       - name: Build Documentation for “constance_support_rza1”
         uses: actions-rs/cargo@v1
         with: { command: doc, args: -p constance_support_rza1 }
+
+      - name: Build Documentation for “constance”
+        uses: actions-rs/cargo@v1
+        with: { command: doc, args: -p constance --all-features }
 
       - name: Generate Badge
         run: |
