--- a/examples/basic/Cargo.toml
+++ b/examples/basic/Cargo.toml
@@ -7,6 +7,6 @@ publish = false
 
 [dependencies]
 constance_port_std = { path = "../../src/constance_port_std" }
-constance = { path = "../../src/constance" }
+constance = { path = "../../src/constance", features = ["system_time"] }
 
 log = { version = "0.4.8" }
