--- a/examples/basic_nucleo_f401re/Cargo.toml
+++ b/examples/basic_nucleo_f401re/Cargo.toml
@@ -10,7 +10,7 @@ publish = false
 # target-specific section.
 [target."cfg(target_os = \"none\")".dependencies]
 constance_port_arm_m = { path = "../../src/constance_port_arm_m" }
-constance = { path = "../../src/constance" }
+constance = { path = "../../src/constance", features = ["system_time"] }
 
 panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
 nucleo-f401re = { version = "0.4.1" }
