test(test_suite): make `constance`'s features optional
The freestanding test drivers currently don't support using a subset of
features and therefore enable all of such features.

`constance_port_std` can have a subset of features enabled in this way:

    cargo test -p constance_port_std -Zpackage-features \
        --no-default-features \
        --features constance_test_suite/system_time,...

--- a/src/constance_port_arm_m_test_driver/Cargo.toml
+++ b/src/constance_port_arm_m_test_driver/Cargo.toml
@@ -44,6 +44,8 @@ path = "../constance_test_suite"
 default-features = false
 features = [
     # compile the test case specified by `CONSTANCE_TEST`
-    "tests_selective"
+    "tests_selective",
+    # enable all of Constance's optional features
+    "full",
 ]
 optional = true
