feat(kernel): add `priority_boost` feature
This feature follows the pattern of the third item of CC-PERF-UNUSED.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,6 +86,7 @@ jobs:
         os: [ubuntu-20.04]
         features:
           - ""
+          - priority_boost
           - system_time
     steps:
       - name: Checkout
