--- a/src/constance_port_std/Cargo.toml
+++ b/src/constance_port_std/Cargo.toml
@@ -22,13 +22,8 @@ constance = { path = "../constance" }
 
 env_logger = "0.7.1"
 once_cell = "1.4.0"
+try-mutex = "0.2.0"
 log = "0.4.8"
-
-[dependencies.try-lock]
-# - “Make `TryLock::new` `const fn`”
-#   <https://github.com/seanmonstar/try-lock/pull/2>
-git = "https://github.com/yvt/try-lock.git"
-rev = "cf06bc26a49d511bec22aa36fb68a882e8713d3b"
 
 [dev-dependencies.constance_test_suite]
 path = "../constance_test_suite"
