chore: bump to 0.1.0, update crate metadata

--- a/examples/basic_gr_peach/Cargo.toml
+++ b/examples/basic_gr_peach/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "basic_gr_peach"
-version = "0.1.0"
+version = "0.0.0"
 authors = ["yvt <i@yvt.jp>"]
 edition = "2018"
+publish = false
 
 [dependencies]
 constance_support_rza1 = { path = "../../src/constance_support_rza1", features = ["semver-exempt"] }
