--- a/src/constance_portkit/Cargo.toml
+++ b/src/constance_portkit/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "constance_portkit"
-version = "0.0.1"
+version = "0.1.0"
 authors = ["yvt <i@yvt.jp>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
@@ -9,7 +9,7 @@ keywords = ["constance", "simulator"]
 repository = "https://github.com/yvt/Constance"
 
 [dependencies]
-constance = { path = "../constance" }
+constance = { version = "0.1.0", path = "../constance" }
 
 num-rational = { version = "0.3.0", default-features = false }
 svgbobdoc = { version = "0.2.2" }
