--- a/src/constance_support_rza1/Cargo.toml
+++ b/src/constance_support_rza1/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "constance_support_rza1"
-version = "0.0.1"
+version = "0.1.0"
 authors = ["yvt <i@yvt.jp>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
@@ -19,9 +19,9 @@ semver-exempt = [
 ]
 
 [dependencies]
-constance_port_arm = { path = "../constance_port_arm" }
-constance_portkit = { path = "../constance_portkit" }
-constance = { path = "../constance" }
+constance_port_arm = { version = "0.1.0", path = "../constance_port_arm" }
+constance_portkit = { version = "0.1.0", path = "../constance_portkit" }
+constance = { version = "0.1.0", path = "../constance" }
 
 embedded-hal = { version = "0.2.4", optional = true }
 rza1 = { version = "0.2.0", features = ["ostm"] }
