doc: symlink `README.md` to include it in `constance`'s published package

--- a/src/constance/Cargo.toml
+++ b/src/constance/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["yvt <i@yvt.jp>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
-readme = "../../README.md"
+readme = "README.md"
 description = "Static RTOS testing the limit of Rust's const eval and generics"
 categories = ["embedded", "no-std"]
 keywords = ["constance", "rtos"]
