chore(docs.rs): add docs.rs metadata
<https://docs.rs/about/metadata>

- `targets = []` disables non-default targets to save the computing
  resource of docs.rs.

--- a/src/constance_port_arm_m/Cargo.toml
+++ b/src/constance_port_arm_m/Cargo.toml
@@ -22,3 +22,6 @@ constance = { version = "0.1.0", path = "../constance" }
 [target."cfg(target_os = \"none\")".dependencies]
 cortex-m-rt = "0.6.12"
 cortex-m = "0.6.2"
+
+[package.metadata.docs.rs]
+targets = []
