--- a/src/constance/Cargo.toml
+++ b/src/constance/Cargo.toml
@@ -37,3 +37,7 @@ quickcheck_macros = "0.9.1"
 env_logger = "0.7.1"
 quickcheck = "0.9.2"
 log = "0.4.8"
+
+[package.metadata.docs.rs]
+all-features = true
+targets = []
