--- a/src/constance_port_arm/Cargo.toml
+++ b/src/constance_port_arm/Cargo.toml
@@ -18,3 +18,6 @@ constance = { version = "0.1.0", path = "../constance" }
 
 register = "0.5.1"
 r0 = "0.2.2"
+
+[package.metadata.docs.rs]
+targets = []
