--- a/src/constance_portkit/Cargo.toml
+++ b/src/constance_portkit/Cargo.toml
@@ -21,3 +21,6 @@ env_logger = { version = "0.7.1" }
 quickcheck = { version = "0.9.2" }
 itertools = { version = "0.9.0" }
 log = { version = "0.4.8" }
+
+[package.metadata.docs.rs]
+targets = []
