--- a/src/constance_test_suite/Cargo.toml
+++ b/src/constance_test_suite/Cargo.toml
@@ -34,3 +34,6 @@ log = { version = "0.4.8" }
 quickcheck_macros = "0.9.1"
 env_logger = "0.7.1"
 quickcheck = "0.9.2"
+
+[package.metadata.docs.rs]
+targets = []
