--- a/src/r3_port_riscv/Cargo.toml
+++ b/src/r3_port_riscv/Cargo.toml
@@ -19,8 +19,8 @@ r3_portkit = { version = "0.1.0", path = "../r3_portkit" }
 r3 = { version = "0.1.0", path = "../r3" }
 
 register = { version = "0.5.1" }
-riscv-rt = { version = "0.8.0" }
-riscv = { version = "0.6.0" }
+riscv-rt = { version = ">= 0.6.0, < 0.9.0" }
+riscv = { version = ">= 0.5.0, < 0.7.0" }
 
 [package.metadata.docs.rs]
 targets = []
