--- a/src/r3_port_riscv_test_driver/Cargo.toml
+++ b/src/r3_port_riscv_test_driver/Cargo.toml
@@ -60,9 +60,9 @@ r3 = { path = "../r3", optional = true }
 rtt-target = { version = "0.2.0", optional = true }
 e310x-hal = { version = "0.8.3", optional = true, features = ["g002"] }
 k210-hal = { version = "0.2.0", optional = true }
-riscv-rt = { version = "0.8.0", optional = true }
+riscv-rt = { version = ">= 0.6.0, < 0.9.0", optional = true }
 e310x = { version = "0.8.1", optional = true }
-riscv = { version = "0.6.0", optional = true, features = ["inline-asm"] }
+riscv = { version = ">= 0.5.0, < 0.7.0", optional = true }
 log = { version = "0.4.8", optional = true }
 nb = { version = "0.1.3", optional = true }
 
