--- a/src/r3_port_arm/Cargo.toml
+++ b/src/r3_port_arm/Cargo.toml
@@ -7,7 +7,7 @@ license = "MIT OR Apache-2.0"
 description = "Arm-A port for R3"
 categories = ["embedded", "no-std"]
 keywords = ["r3", "arm"]
-repository = "https://github.com/yvt/Constance"
+repository = "https://github.com/yvt/r3"
 
 [features]
 preload-registers = []
