--- a/src/r3_support_rza1/Cargo.toml
+++ b/src/r3_support_rza1/Cargo.toml
@@ -7,7 +7,7 @@ license = "MIT OR Apache-2.0"
 description = "Supporting package for running R3 on Renesas RZ/A1"
 categories = ["embedded", "no-std"]
 keywords = ["r3", "arm", "renesas"]
-repository = "https://github.com/yvt/Constance"
+repository = "https://github.com/yvt/r3"
 
 [features]
 semver-exempt = [
