--- a/src/r3_port_std/Cargo.toml
+++ b/src/r3_port_std/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/yvt/r3"
 [dependencies]
 r3 = { version = "0.1.0", path = "../r3" }
 
+atomic_ref = "0.2.0"
 env_logger = "0.7.1"
 once_cell = "1.4.0"
 try-mutex = "0.2.0"
