--- a/src/r3_test_suite/Cargo.toml
+++ b/src/r3_test_suite/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "r3_test_suite"
-version = "0.1.0"
+version = "0.0.0"
 authors = ["yvt <i@yvt.jp>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
@@ -8,6 +8,7 @@ categories = ["embedded", "no-std", "development-tools::testing"]
 description = "Test suite for R3"
 keywords = ["r3"]
 repository = "https://github.com/yvt/r3"
+publish = false
 
 [features]
 default = ["tests_all", "full"]
