chore(deps): upgrade `register` to 1.0.0, yet still supporting the old version
`register` version 1.0 only changes the required version of
`tock-registers`, which is irrelevant to us.

--- a/src/r3_port_arm/Cargo.toml
+++ b/src/r3_port_arm/Cargo.toml
@@ -16,7 +16,7 @@ preload-registers = []
 r3_portkit = { version = "0.1.0", path = "../r3_portkit" }
 r3 = { version = "0.1.0", path = "../r3" }
 
-register = "0.5.1"
+register = ">= 0.5.1, < 2.0.0"
 r0 = "0.2.2"
 
 [package.metadata.docs.rs]
