--- a/src/r3_port_arm_test_driver/Cargo.toml
+++ b/src/r3_port_arm_test_driver/Cargo.toml
@@ -38,7 +38,7 @@ arm_semihosting = { path = "../arm_semihosting", optional = true }
 r3 = { path = "../r3", optional = true }
 
 staticvec = { version = "0.10.5", optional = true, default-features = false }
-register = { version = "0.5.1", optional = true }
+register = { version = ">= 0.5.1, < 2.0.0", optional = true }
 rza1 = { version = "0.2.0", optional = true, features = ["cpg", "gpio", "scif"] }
 log = { version = "0.4.8", optional = true }
 
