feat(examples): start working on the example project for Raspberry Pi Pico
The app and the kernel are working correctly. However, the serial
console is not configured, so you can't see the textual output.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ members = [
     "examples/basic",
     "examples/basic_gr_peach",
     "examples/basic_nucleo_f401re",
+    "examples/basic_rp_pico",
     "src/arm_semihosting",
     "src/r3",
     "src/r3_port_arm",
