--- a/examples/basic_rp_pico/Cargo.toml
+++ b/examples/basic_rp_pico/Cargo.toml
@@ -9,6 +9,7 @@ publish = false
 # `cargo test --all` to fail because of this, so we put dependencies in the
 # target-specific section.
 [target."cfg(target_os = \"none\")".dependencies]
+r3_support_rp2040 = { path = "../../src/r3_support_rp2040", features = ["semver-exempt"] }
 r3_port_arm_m = { path = "../../src/r3_port_arm_m" }
 r3 = { path = "../../src/r3", features = ["system_time"] }
 
