--- a/src/r3_support_rp2040/Cargo.toml
+++ b/src/r3_support_rp2040/Cargo.toml
@@ -11,18 +11,25 @@ repository = "https://github.com/yvt/r3"
 
 [features]
 semver-exempt = [
-    "cortex-m",
     "embedded-hal",
+    "usbd-serial",
+    "usb-device",
+    "cortex-m",
+    "vcell",
     "nb",
 ]
 
 [dependencies]
+r3_port_arm_m = { version = "0.1.0", path = "../r3_port_arm_m" }
 r3_portkit = { version = "0.1.0", path = "../r3_portkit" }
 r3 = { version = "0.1.0", path = "../r3" }
 
 embedded-hal = { version = "0.2.4", optional = true }
+usbd-serial = { version = "0.1.1", optional = true }
+usb-device = { version = "0.2.7", optional = true }
 cortex-m = { version = "0.6.3", optional = true, features = ["inline-asm"] }
 rp2040 = { version = "0.1.0" }
+vcell = { version = "0.1.2", optional = true }
 nb = { version = "1.0.0", optional = true }
 
 [package.metadata.docs.rs]
