--- a/src/r3_port_arm_m_test_driver/Cargo.toml
+++ b/src/r3_port_arm_m_test_driver/Cargo.toml
@@ -22,6 +22,7 @@ run = [
 # so it doesn't require `output-*`.
 board-rp_pico = [
     "r3_support_rp2040",
+    "rp2040",
 ]
 
 # Other targets specify a generic output mechanism
@@ -47,6 +48,7 @@ panic-rtt-target = { version = "0.1.0", optional = true, features = ["cortex-m"]
 cortex-m-rt = { version = "0.6.12", optional = true, features = ["device"] }
 rtt-target = { version = "0.2.0", optional = true, features = ["cortex-m"] }
 cortex-m = { version = "0.6.3", optional = true, features = ["inline-asm"] }
+rp2040 = { version = "0.1.0", optional = true }
 log = { version = "0.4.8", optional = true }
 
 [dependencies.r3_test_suite]
