--- a/src/r3_test_runner/Cargo.toml
+++ b/src/r3_test_runner/Cargo.toml
@@ -25,6 +25,7 @@ probe-rs = "0.8.0"
 tempdir = "0.3.7"
 anyhow = "1.0.32"
 serde = "1.0.114"
+rusb = "0.6.5"
 toml = "0.5.6"
 log = "0.4.8"
 crc = "1.8.1"
