--- a/src/r3_test_runner/Cargo.toml
+++ b/src/r3_test_runner/Cargo.toml
@@ -18,6 +18,7 @@ lazy_static = "1.4.0"
 env_logger = "0.7.1"
 mio-serial = "3.3.1"
 serde_json = "1.0.57"
+serialport = "3.3.0"
 itertools = "0.9.0"
 structopt = "0.3.15"
 thiserror = "1.0.20"
