--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -7,6 +7,9 @@ jobs:
   check:
     name: Build and Deploy Docs
     runs-on: ubuntu-20.04
+    # FIXME: This workflow is temporarily disabled until the following issue
+    #        is fixed: <https://github.com/rust-lang/rust/issues/82284>
+    if: false
     steps:
       - name: Checkout
         uses: actions/checkout@v2
