chore(ci): upgrade `JamesIves/github-pages-deploy-action` to 4.1.0
- <https://github.com/JamesIves/github-pages-deploy-action/releases/tag/4.0.0>
- <https://github.com/JamesIves/github-pages-deploy-action/releases/tag/4.1.0>

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -55,8 +55,7 @@ jobs:
           mv target/doc output
 
       - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@3.7.1
+        uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: output
+          branch: gh-pages
+          folder: output
