test: work around the FP ABI mismatch of `riscv` and `riscv-rt`
This commit replaces `riscv` and `riscv-rt` with a customized version to
work around <https://github.com/rust-embedded/riscv/issues/69>.

The long-term solution is simple: wait until `asm!` is stabilized and
rewrite all assembler code of `riscv` and `riscv-rt` in inline
assembler. The short-term solution is complicated by multiple factors:

 - `asm!` and `#[naked]` are not stable yet. Therefore, the precompiled
   object files are still needed to support the stable Rust.

 - There is no reliable way to check the target floating-point ABI from
   the build script.

 - Many crates depend on older versions of `riscv` and `riscv-rt` that
   use the old form of `asm!` and have lower MSRVs.

This commit skips over these considerations by assuming the target
compiler version. Specifically:

 - The customized version of `riscv 0.5` uses `llvm_asm!`, which is
   supported by our target compiler version but not by the target
   compiler of the original version.

 - The customized version of `riscv-rt` replaces all assembler code with
   inline assembler wrapped in naked functions.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,5 +29,26 @@ members = [
 git = "https://github.com/probe-rs/probe-rs.git"
 rev = "8bb53577ccee46550c0b688dfc2d13c1cd896083"
 
+[patch.crates-io.riscv]
+# We need to enable `riscv/inline-asm` to work around
+# <https://github.com/rust-embedded/riscv/issues/69>. However, some external
+# crates depend on `riscv` 0.5.x, which uses the old form of `asm!` with the
+# LLVM syntax, which was moved to `llvm_asm!` when the new inline assembler
+# syntax has landed. Therefore, we have to patch `riscv` 0.5.x with the version
+# that uses the form of inline assembler supported by the current compiler.
+git = "https://github.com/yvt/rust-riscv.git"
+branch = "0.5-asm"
+
+[patch.crates-io.riscv-rt]
+# FIXME: This is a work-around for
+# <https://github.com/rust-embedded/riscv/issues/69>. The upstream version of
+# `riscv-rt` includes a precompiled object file, which may be rejected by the
+# linker because of a floating-point ABI mismatch. This patched version replaces
+# the precompiled object file with naked functions, which will always be
+# complied with the expected floating-point ABI.
+git = "https://github.com/yvt/rust-riscv-rt.git"
+rev = "cd7b460d1940630d235b5a7b46cc50421c12e39b"
+version = "0.6.2"
+
 [profile.release]
 debug = true
