--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -163,10 +163,10 @@ jobs:
 
           # SiFive U, RV64GC
           - { ty: riscv, runner_target: qemu_sifive_u_rv64, runner_args: "" }
-          # SiFive E, RV64IMAC
-          - { ty: riscv, runner_target: qemu_sifive_e_rv64, runner_args: "" }
-          # SiFive E, RV64IMA
-          - { ty: riscv, runner_target: qemu_sifive_e_rv64, runner_args: --arch rv64i+m+a }
+          # SiFive U, RV64IMAC
+          - { ty: riscv, runner_target: qemu_sifive_u_rv64, runner_args: --arch rv64i+m+a+c }
+          # SiFive U, RV64IMA
+          - { ty: riscv, runner_target: qemu_sifive_u_rv64, runner_args: --arch rv64i+m+a }
           # SiFive U, RV32GC
           - { ty: riscv, runner_target: qemu_sifive_u_rv32, runner_args: "" }
           # SiFive E, RV32IMAC
