--- a/src/r3/Cargo.toml
+++ b/src/r3/Cargo.toml
@@ -26,9 +26,9 @@ assert_matches = { version = "1.4.0" }
 num-integer = { version = "0.1.42", default-features = false }
 num-traits = { version = "0.2.11", default-features = false }
 pin-utils = { version = "0.1.0" }
-staticvec = { version = "0.10.5", default-features = false }
 svgbobdoc = { version = "0.2.3" }
 tokenlock = { version = "0.3.4", default-features = false }
+arrayvec = { version = "0.7.1", default-features = false }
 bitflags = { version = "1.2.1" }
 chrono = { version = "0.4.13", optional = true, default-features = false }
 
