--- a/src/r3_port_arm_test_driver/Cargo.toml
+++ b/src/r3_port_arm_test_driver/Cargo.toml
@@ -28,7 +28,7 @@ board-rza1 = [
 
 output-semihosting = [
     "arm_semihosting",
-    "staticvec",
+    "arrayvec",
 ]
 
 [dependencies]
@@ -37,7 +37,7 @@ r3_port_arm = { path = "../r3_port_arm", optional = true }
 arm_semihosting = { path = "../arm_semihosting", optional = true }
 r3 = { path = "../r3", optional = true }
 
-staticvec = { version = "0.10.5", optional = true, default-features = false }
+arrayvec = { version = "0.7.1", optional = true, default-features = false }
 register = { version = ">= 0.5.1, < 2.0.0", optional = true }
 rza1 = { version = "0.2.0", optional = true, features = ["cpg", "gpio", "scif"] }
 log = { version = "0.4.8", optional = true }
